--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a class="active" href="index.html">home</a></li>
+                                            <li><a href="about.html">about</a></li>
+
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="about.html">about</a></li>
@@ -109,13 +111,8 @@
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
-                                    <div class="search_btn">
-                                        <a href="#">
-                                            <i class="ti-search"></i>
-                                        </a>
-                                    </div>
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="#">Add Property</a>
+                                        <a href="#">Schedule a visit</a>
                                     </div>
                                 </div>
                             </div>
@@ -476,7 +473,7 @@
     </div>
     <!-- /popular_property  -->
 
-    <section class="section-gap">
+    <section class="section-gap bg-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -489,33 +486,33 @@
             </div>
             <div class="row d-flex">
                 <div class="col-lg-4 col-md-6 d-flex align-self-stretch ftco-animate">
-                    <div class="media block-6 services d-block text-center">
+                    <div class="media p-4 block-6 services d-block text-center">
                         <div class="icon d-flex justify-content-center align-items-center"><span
                                 class="flaticon-rent"></span></div>
                         <div class="media-body py-md-4">
-                            <h3>Selling Service</h3>
+                            <h3 class="py-3 m-0">Selling Service</h3>
                             <p>A small river named Duden flows by their place and supplies it with the necessary
                                 regelialia.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 d-flex align-self-stretch ftco-animate">
-                    <div class="media block-6 services d-block text-center">
+                    <div class="media  p-4 block-6 services d-block text-center">
                         <div class="icon d-flex justify-content-center align-items-center"><span
                                 class="flaticon-for-rent"></span></div>
                         <div class="media-body py-md-4">
-                            <h3>Rental Service</h3>
+                            <h3 class="py-3 m-0">Rental Service</h3>
                             <p>A small river named Duden flows by their place and supplies it with the necessary
                                 regelialia.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 d-flex align-self-stretch ftco-animate">
-                    <div class="media block-6 services d-block text-center">
+                    <div class="media  p-4 block-6 services d-block text-center">
                         <div class="icon d-flex justify-content-center align-items-center"><span
                                 class="flaticon-clipboard"></span></div>
                         <div class="media-body py-md-4">
-                            <h3>Property Listing</h3>
+                            <h3 class="py-3 m-0">Property Listing</h3>
                             <p>A small river named Duden flows by their place and supplies it with the necessary
                                 regelialia.</p>
                         </div>
@@ -731,7 +728,7 @@
 
 
     <!-- Services Section Start -->
-    <section id="services" class="section-padding bg-gray">
+    <section id="services" class="section-gap">
         <div class="container">
             <div class="col-lg-12">
                 <div class="section-title mb-38 mt-31 text-center">
@@ -743,36 +740,36 @@
           <div class="row">
             <!-- Services item -->
             <div class="col-md-6 col-lg-4 col-xs-12">
-              <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
+              <div class="services-item p-5 mb-4 bg-white rounded wow fadeInRight" data-wow-delay="0.3s">
                 <div class="icon">
                   <i class="flaticon-search"></i>
                 </div>
                 <div class="services-content">
-                  <h3><a href="#">Search Your Home</a></h3>
+                  <h3 class="py-2 mt-3 mb-2"><a href="#">Search Your Home</a></h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde perspiciatis dicta labore nulla beatae quaerat quia incidunt laborum aspernatur...</p>
                 </div>
               </div>
             </div>
             <!-- Services item -->
             <div class="col-md-6 col-lg-4 col-xs-12">
-              <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
+              <div class="services-item  p-5 mb-4 bg-white rounded wow fadeInRight" data-wow-delay="0.6s">
                 <div class="icon">
                   <i class="flaticon-contact"></i>
                 </div>
                 <div class="services-content">
-                  <h3><a href="#">Let's Contact With Us</a></h3>
+                  <h3  class="py-2 mt-3 mb-2" ><a href="#">Let's Contact With Us</a></h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde perspiciatis dicta labore nulla beatae quaerat quia incidunt laborum aspernatur...</p>
                 </div>
               </div>
             </div>
             <!-- Services item -->
             <div class="col-md-6 col-lg-4 col-xs-12">
-              <div class="services-item wow fadeInRight" data-wow-delay="0.9s">
+              <div class="services-item p-5 mb-4 bg-white rounded wow fadeInRight" data-wow-delay="0.9s">
                 <div class="icon">
                   <i class="flaticon-payment-method"></i>
                 </div>
                 <div class="services-content">
-                  <h3><a href="#">Make a Deal and Payment</a></h3>
+                  <h3  class="py-2 mt-3 mb-2" ><a href="#">Make a Deal and Payment</a></h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde perspiciatis dicta labore nulla beatae quaerat quia incidunt laborum aspernatur...</p>
                 </div>
               </div>
