--- a/Property.html
+++ b/Property.html
@@ -26,7 +26,8 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
+
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -114,7 +115,7 @@
                                         </a>
                                     </div>
                                     <div class="book_btn d-none d-lg-block">
-                                        <a  href="#">Add Property</a>
+                                        <a  href="#">Add Property<span class="ti-angle-double-right"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -129,75 +130,113 @@
         </div>
     </header>
     <!-- header-end -->
-
-    <!-- slider_area_start -->
-    <div class="slider_area">
-            <div class="single_slider single_slider2  d-flex align-items-center property_bg overlay2">
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-xl-10 offset-xl-1">
-                                <div class="property_wrap">
-                                        <div class="slider_text text-center justify-content-center">
-                                                <h3>Search property</h3>
-                                            </div>
-                                            <div class="property_form">
-                                                <form action="#">
-                                                    <div class="row">
-                                                        <div class="col-xl-12">
-                                                            <div class="form_wrap d-flex">
-                                                                    <div class="single-field max_width ">
-                                                                            <label for="#">Location</label>
-                                                                            <select class="wide" >
-                                                                                    <option data-display="NewYork">NewYork</option>
-                                                                                    <option value="1">Bangladesh</option>
-                                                                                    <option value="2">India</option>
-                                                                            </select>
-                                                                        </div>
-                                                                    <div class="single-field max_width ">
-                                                                            <label for="#">Property type</label>
-                                                                            <select class="wide" >
-                                                                                    <option data-display="Apartment">Apartment</option>
-                                                                                    <option value="1">Apartment</option>
-                                                                                    <option value="2">Apartment</option>
-                                                                            </select>
-                                                                        </div>
-                                                                        <div class="single_field range_slider">
-                                                                                <label for="#">Price ($)</label>
-                                                                            <div id="slider"></div>
-                                                                        </div>
-                                                                    <div class="single-field min_width ">
-                                                                            <label for="#">Bed Room</label>
-                                                                            <select class="wide" >
-                                                                                    <option data-display="01">01</option>
-                                                                                    <option value="1">02</option>
-                                                                                    <option value="2">03</option>
-                                                                            </select>
-                                                                        </div>
-                                                                    <div class="single-field min_width ">
-                                                                            <label for="#">Bath Room</label>
-                                                                            <select class="wide" >
-                                                                                    <option data-display="01">01</option>
-                                                                                    <option value="1">02</option>
-                                                                                    <option value="2">03</option>
-                                                                            </select>
-                                                                        </div>
-                                                                        <div class="serach_icon">
-                                                                                <a href="#">
-                                                                                        <i class="ti-search"></i>
-                                                                                </a>
-                                                                            </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                </div>
-                            </div>
-                        </div>
+    <!-- bradcam_area  -->
+    <div class="bradcam_area bradcam_bg_1">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="bradcam_text text-center">
+                        <h3>About Us</h3>
+                        <p>Home<span class="ti-angle-double-right"></span>About Us</p>
                     </div>
                 </div>
+            </div>
+        </div>
     </div>
-    <!-- slider_area_end -->
+    <!--/ bradcam_area  -->
+
+
+    <!--::apartment_part end::-->
+    <div class="apartment_part">
+        <div class="container">
+        <div class="row justify-content-between align-content-center">
+            <div class="col-md-8 col-lg-7">
+                <div class="section_tittle">
+                    <h1>Provide The <br>
+                    Beautiful Apartment</h1>
+                </div>
+            </div>
+            <div class="col-md-4 col-lg-5">
+                <div class="view_more_btn float-right d-none d-md-block">
+                    <a href="#" class="btn_2">Read More <span class="ti-arrow-right"></span></a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-lg-4">
+                <div class="single_appartment_part">
+                    <div class="appartment_img">
+                    <img src="img/property/2.png" alt="">
+                    <div class="single_appartment_text">
+                        <h3>$1,235632</h3>
+                        <p><span class="ti-location-pin"></span> 384 Treeline Park, San Antonio, TX</p>
+                    </div>
+                    </div>
+                    <div class="single_appartment_content">
+                    <a href="" class="love_us"> <span class="ti-heart"></span> </a>
+                    <p>Home, Apartment</p>
+                    <a href="#"><h4>Detached House For Sale</h4></a>
+                    <ul class="list-unstyled"> 
+                        <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
+                        <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
+                        <li><a href=""><span class="flaticon-frame"></span></a>  2400 sqft</li>
+                    </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+                <div class="single_appartment_part">
+                    <div class="appartment_img">
+                    <img src="img/property/2.png" alt="">
+                    <div class="single_appartment_text">
+                        <h3>$1,235632</h3>
+                        <p><span class="ti-location-pin"></span> 384 Treeline Park, San Antonio, TX</p>
+                    </div>
+                    </div>
+                    <div class="single_appartment_content">
+                    <a href="" class="love_us"> <span class="ti-heart"></span> </a>
+                    <p>Home, Apartment</p>
+                    <a href="#"><h4>Detached House For Sale</h4></a>
+                    <ul class="list-unstyled"> 
+                        <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
+                        <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
+                        <li><a href=""><span class="flaticon-frame"></span></a>  2400 sqft</li>
+                    </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+                <div class="single_appartment_part">
+                    <div class="appartment_img">
+                    <img src="img/property/2.png" alt="">
+                    <div class="single_appartment_text">
+                        <h3>$1,235632</h3>
+                        <p><span class="ti-location-pin"></span> 384 Treeline Park, San Antonio, TX</p>
+                    </div>
+                    </div>
+                    <div class="single_appartment_content">
+                    <a href="" class="love_us"> <span class="ti-heart"></span> </a>
+                    <p>Home, Apartment</p>
+                    <a href="#"><h4>Detached House For Sale</h4></a>
+                    <ul class="list-unstyled"> 
+                        <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
+                        <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
+                        <li><a href=""><span class="flaticon-frame"></span></a>  2400 sqft</li>
+                    </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    <!--::apartment_part end::-->
+
+
+
+
+
+
+
     <div class="popular_property plus_padding">
         <div class="container">
             <div class="row">
